--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,34 @@ header {
   header input {
     border-radius: 7px;
     border-style: none;
-    height: 35px; }
+    height: 25px;
+    margin-top: 6px;
+    width: 220px; }
+
+#main-content {
+  height: 100vh;
+  overflow: auto;
+  padding: 24px 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  align-self: stretch; }
+
+#show-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+  width: 1000px; }
+
+.show-item {
+  width: 300px; }
+
+.show-item img {
+  width: 100%;
+  object-fit: cover;
+  height: 400px; }
 
 footer {
   background-color: #343a40;
