--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,8 @@
   #header #home-button {
     font-size: 25px;
     font-weight: bolder;
-    margin-left: 60px; }
+    margin-left: 60px;
+    cursor: pointer; }
   #header input {
     border-radius: 7px;
     border-style: none;
@@ -30,7 +31,9 @@
     width: 100%; }
   #header .search-item {
     padding: 4px 0;
-    cursor: pointer; }
+    cursor: pointer;
+    width: 100%;
+    height: 100%; }
   #header .search-item:first-child {
     margin-top: 4px;
     padding: 8px 0; }
@@ -47,7 +50,6 @@
     padding-left: 4px; }
 
 #main-content {
-  height: 100vh;
   overflow: auto;
   padding: 24px 0;
   display: flex;
@@ -59,9 +61,9 @@
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  width: 1000px; }
+  width: 80%; }
 
 .show-item {
   width: 300px; }
@@ -69,7 +71,8 @@
 .show-item img {
   width: 100%;
   object-fit: cover;
-  height: 400px; }
+  height: 400px;
+  cursor: pointer; }
 
 footer {
   background-color: #343a40;
