--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@
         font-size: 25px;
         font-weight: bolder;
         margin-left: 60px;
+        cursor: pointer;
 
     }
 
@@ -44,6 +45,8 @@
     .search-item {
         padding: 4px 0;
         cursor: pointer;
+        width: 100%;
+        height: 100%;
 
     }
 
@@ -71,8 +74,12 @@
 
 }
 
+// #main {
+//     width: 80%;
+// }
+
 #main-content {
-    height: 100vh;
+    // height: 90vh;
     overflow: auto;
     padding: 24px 0;
     display: flex;
@@ -87,9 +94,9 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    width: 1000px;
+    width: 80%;
 }
 
 .show-item {
@@ -100,6 +107,7 @@
     width: 100%;
     object-fit: cover;
     height: 400px;
+    cursor: pointer;
 }
 
 footer {
