--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,15 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+    h1 {
+        font-weight: bolder;
+    }
+
+    h3 {
+        font-weight: bolder;
+    }
 }
 
 #header {
@@ -12,6 +21,7 @@
     justify-content: space-between;
     padding: 0 24px;
     color: white;
+
 
     #home-button {
         font-size: 25px;
@@ -77,16 +87,17 @@
 
 
 #main-content {
-    // height: 90vh;
+
     overflow: auto;
     padding: 24px 0;
     display: flex;
     align-items: center;
     flex-direction: column;
     align-self: stretch;
+
 }
 
-;
+
 
 #show-list {
     display: flex;
