--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  font-family: Verdana, Geneva, Tahoma, sans-serif; }
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
   #wrapper h1 {
     font-weight: bolder; }
   #wrapper h3 {
