--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 
 #header {
   background-color: #343a40;
-  height: 70px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -21,10 +21,12 @@
     font-weight: bolder;
     margin-left: 60px;
     cursor: pointer; }
+  #header #home-button:hover {
+    color: #7fdfbf; }
   #header input {
     border-radius: 7px;
     border-style: none;
-    height: 30px;
+    height: 25px;
     margin-top: 6px;
     width: 220px;
     margin-right: 60px; }
