--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,7 +15,7 @@
 
 #header {
     background-color: #343a40;
-    height: 70px;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -28,7 +28,10 @@
         font-weight: bolder;
         margin-left: 60px;
         cursor: pointer;
+    }
 
+    #home-button:hover {
+        color: rgb(127, 223, 191);
     }
 
 
@@ -36,11 +39,13 @@
     input {
         border-radius: 7px;
         border-style: none;
-        height: 30px;
+        height: 25px;
         margin-top: 6px;
         width: 220px;
         margin-right: 60px;
     }
+
+
 
     #search-wrapper {
         position: relative;
