--- a/css/main.css
+++ b/css/main.css
@@ -67,13 +67,17 @@
 #show-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 30px;
   justify-content: center;
   align-items: center;
   width: 80%; }
 
 .show-item {
   width: 300px; }
+
+.show-item:hover {
+  width: 320px;
+  box-shadow: 5px 10px 12px 10px #8f8fbb; }
 
 .show-item img {
   width: 100%;
@@ -82,7 +86,11 @@
   cursor: pointer; }
 
 .show-item p {
-  cursor: pointer; }
+  cursor: pointer;
+  color: #08779c;
+  margin-left: 10px;
+  font-size: 20px;
+  font-weight: bolder; }
 
 footer {
   background-color: #343a40;
